# codeexplainer

./: .gitignore  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  fast_audio.ps1  generate_audio.py  preserve_structure.py  pyproject.toml  requirements.txt  run_demo.py  setup.py  universal_codeexplainer.py
config/: default.yaml
examples/sample_project/: calculator.py  config.py  main.py  utils.py
src/codeexplainer/: __init__.py  cli.py
src/codeexplainer/core/: __init__.py  analyzer.py  explanation_generator.py  file_analyzer.py  project_traverser.py
src/codeexplainer/parsers/: __init__.py  tree_sitter_parsers.py
src/codeexplainer/utils/: __init__.py  code_metrics.py  config.py  file_utils.py  text_utils.py  validators.py
tests/: test_analyzer.py  test_cli.py  test_file_analyzer.py  test_utils.py
